<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <android.support.constraint.Guideline
        android:id="@+id/activity_meals_selector_guideline_top"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/activity_meals_selector_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/activity_meals_selector_search_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_meals_selector_guideline_top"/>

    <RadioGroup
        android:id="@+id/activity_meals_selector_radio_group_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_meals_selector_title">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_meals_selector_vegetables"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_meals_selector_vegetables"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_meals_selector_pork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_meals_selector_pork"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_meals_selector_beef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_meals_selector_beef"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_meals_selector_chicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_meals_selector_chicken"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activity_meals_selector_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/activity_meals_selector_all"/>

    </RadioGroup>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/activity_meals_selector_search_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:padding="8dp"
        android:text="@string/activity_meals_selector_search_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>